src/test/ui/parser/issue-3036.stderr
error: expected `;`, found ``}``
  --> $DIR/issue-3036.rs:5:14
   |
LL |     let x = 3
   |              ^ If I were you, I would simply add `;` here
LL | }
   | - unexpected token

error: aborting due to previous error

